@@ -1,0 +1,6 @@
+#!/bin/bash
+
+rm /usr/bin/mrViewer
+
+update-mime-database /usr/share/mime
+
