@@ -1,0 +1,4 @@
+rm /usr/bin/mrViewer.sh
+
+update-mime-database /usr/share/mime
+
