@@ -1,8 +1,0 @@
-[Desktop Entry]
-Name=mrViewer-v@VERSION@
-Comment=Professional Video and Flipbook player
-Exec="@CMAKE_INSTALL_PREFIX@/mrViewer-v@VERSION@-Linux-64/bin/mrViewer.sh" %F
-Icon="@MRV_PIXMAPS_DIR@/mrViewer.png"
-Terminal=false
-Type=Application
-Categories=Graphics;
