@@ -1,8 +1,0 @@
-[Desktop Entry]
-Name=mrViewer-v2.7.0
-Comment=Professional Video and Flipbook player
-Exec="/usr/local/mrViewer-v2.7.0-Linux-64/bin/mrViewer.sh" %F
-Icon="/usr/share/icons/hicolor/32x32/apps//mrViewer.png"
-Terminal=false
-Type=Application
-Categories=Graphics;
